--- a/market.html
+++ b/market.html
@@ -86,6 +86,6 @@
     <footer class="footer">© 宮善貴金属</footer>
   </div>
 
-  <script defer src="./assets/app.js"></script>
+  <script defer src="./app.js?v=3"></script>
 </body>
 </html>
