--- a/market.html
+++ b/market.html
@@ -47,8 +47,8 @@
     <div class="header-inner" style="display:flex;align-items:center;gap:12px;">
       <img src="./miyazen_logo.png" alt="宮善貴金属" style="height:32px;" />
       <nav class="header-tabs" role="tablist" aria-label="相場タブ" style="display:flex;gap:12px;">
-        <a href="#tomorrow" class="tab-link is-active" role="tab" aria-selected="true">翌日の相場予想</a>
-        <a href="#today" class="tab-link" role="tab" aria-selected="false">本日の買取相場</a>
+       <a href="#tomorrow" class="tab-link" role="tab" aria-selected="false">翌日の相場予想</a>
+<a href="#today" class="tab-link is-active" role="tab" aria-selected="true">本日の買取相場</a>
         <a href="#stones" class="tab-link" role="tab" aria-selected="false">色石相場</a>
       </nav>
     </div>
