--- a/market.html
+++ b/market.html
@@ -92,7 +92,7 @@
     </section>
 
     <!-- 本日の買取相場 -->
-    <section data-section="today" style="display:none">
+    <section data-section="today" style="display:block">
       <!-- ★ 田中インゴット ×99%（あるときだけ表示されます） -->
       <div id="ingot-row" class="ingot-cards">
         <div class="ingot-card">
